Remove autom4te.cache in clean target

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Tue Jul  2 10:08:18 CEST 2002 Wichert Akkerman <wichert@deephackmode.org>
+
+  * debian/rules: Remove autom4te.cache in clean target
+
 Tue Jul  2 09:52:41 CEST 2002 Wichert Akkerman <wichert@deephackmode.org>
 
   * debian/rules: move dpkg.cfg.5 and dselect.cfg.5 into dpkg package
