--- a/debian/changelog
+++ b/debian/changelog
@@ -11,7 +11,7 @@ dpkg (1.10.1) unstable; urgency=low
     Closes: Bug#150739
   * Move dpkg.cfg and dselect.cfg manpages into dpkg package. Closes: Bug#132901
 
- -- Wichert Akkerman <wakkerma@debian.org>  UNRELEASED
+ -- Wichert Akkerman <wakkerma@debian.org>  Tue,  2 Jul 2002 10:30:34 +0200
 
 dpkg (1.10) unstable; urgency=low
 
