check for malloc failure and actually look in /home/wichert for file instead of looking in confdir twice

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Tue Jul  2 12:29:52 CEST 2002 Wichert Akkerman <wichert@deephackmode.org>
+
+  * Merge from HEAD:
+    + lib/myopt: check for malloc failure and actually look in $HOME for
+      file instead of looking in confdir twice
+
 Tue Jul  2 10:20:40 CEST 2002 Wichert Akkerman <wichert@deephackmode.org>
 
   * debian/rules: cp instead of mv since we need files for both dpkg
