--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+dpkg (1.10.2) unstable; urgency=low
+
+  * Make configuration files in $HOME work again
+
+ -- Wichert Akkerman <wakkerma@debian.org>  UNRELEASED
+
 dpkg (1.10.1) unstable; urgency=low
 
   * Add conflict with dpkg-iasearch which intruded on our namespace.
@@ -11,7 +17,7 @@ dpkg (1.10.1) unstable; urgency=low
     Closes: Bug#150739
   * Move dpkg.cfg and dselect.cfg manpages into dpkg package. Closes: Bug#132901
 
- -- Wichert Akkerman <wakkerma@debian.org>  Tue,  2 Jul 2002 10:30:34 +0200
+ -- Wichert Akkerman <wakkerma@debian.org>  Tue,  2 Jul 2002 12:34:07 +0200
 
 dpkg (1.10) unstable; urgency=low
 
