Remove -Z from patch call, as it makes patch warn about missing timestamps.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Thu Jul  4 19:33:20 CDT 2002 Adam Heath <doogie@debian.org>
+
+  * scripts/dpkg-source.pl: Remove -Z from patch call, as it makes patch
+    warn about missing timestamps.
+
 Tue Jul  2 12:11:59 CDT 2002 Adam Heath <doogie@debian.org>
 
   * debian/changelog, debian/control: dpkg + dpkg-static conflict dpkg-dev
