Set date for release.

--- a/debian/changelog
+++ b/debian/changelog
@@ -6,7 +6,7 @@ dpkg (1.10.2) unstable; urgency=low
   * Remove -Z from patch call, in dpkg-source, as it makes patch warn about
     missing timestamps.  Closes: #151965
 
- -- Wichert Akkerman <wakkerma@debian.org>  UNRELEASED
+ -- Wichert Akkerman <wakkerma@debian.org>  Thu,  4 Jul 2002 21:08:09 -0500
 
 dpkg (1.10.1) unstable; urgency=low
 
