Install debian/dselect.conffiles.

--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,7 @@ dpkg (1.10.2) unstable; urgency=low
     in dpkg-source.  Closes: #151691.
   * Remove -Z from patch call, in dpkg-source, as it makes patch warn about
     missing timestamps.  Closes: #151965
+  * Install debian/dselect.conffiles.
 
  -- Adam Heath <doogie@debian.org>  Thu,  4 Jul 2002 21:08:09 -0500
 
