Move dselect.cfg to dselect package

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sat Jul  6 23:51:03 CEST 2002 Wichert Akkerman <wichert@deephackmode.org>
+
+  * debian/rules: Move dselect.cfg to dselect package.
+
 Thu Jul  4 21:31:57 CDT 2002 Adam Heath <doogie@debian.org>
 
   * debian/rules: Install debian/dselect.conffiles.
