--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+dpkg (1.10.3) unstable; urgency=low
+
+  * Move dselect.cfg to dselect package. Closes: Bug#152132
+
+ -- Wichert Akkerman <wakkerma@debian.org>  UNRELEASED
+
 dpkg (1.10.2) unstable; urgency=low
 
   * Make configuration files in $HOME work again
