--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sun Jul  7 14:54:44 CDT 2002 Adam Heath <doogie@debian.org>
+
+  * debian/rules: Fix install location of /usr/lib/dpkg/methods.
+
 Sat Jul  6 23:51:03 CEST 2002 Wichert Akkerman <wichert@deephackmode.org>
 
   * debian/rules: Move dselect.cfg to dselect package.
