--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,8 @@
 dpkg (1.10.3) unstable; urgency=low
 
   * Move dselect.cfg to dselect package. Closes: Bug#152132
+  * Install methods into /usr/lib/dpkg/methods, not /usr/lib/dpkg.  Closes:
+    #152161.
 
  -- Wichert Akkerman <wakkerma@debian.org>  UNRELEASED
 
