Fix test inversion in start-stop-daemon, when checking the pid given in a pid file.  Thanks Thomas Morin <thomas.morin@enst-bretagne.fr>.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Thu Jul 11 22:19:12 CDT 2002 Adam Heath <doogie@debian.org>
+
+  * utils/start-stop-daemon.c: Fix test inversion in start-stop-daemon,
+    when checking the pid given in a pid file.  Thanks Thomas Morin
+    <thomas.morin@enst-bretagne.fr>.
+
 Sun Jul  7 14:54:44 CDT 2002 Adam Heath <doogie@debian.org>
 
   * debian/rules: Fix install location of /usr/lib/dpkg/methods.
