--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,9 @@ dpkg (1.10.3) unstable; urgency=low
   * Move dselect.cfg to dselect package. Closes: Bug#152132
   * Install methods into /usr/lib/dpkg/methods, not /usr/lib/dpkg.  Closes:
     #152161.
+  * Fix test inversion in start-stop-daemon, when checking the pid given in
+    a pid file.  Thanks Thomas Morin <thomas.morin@enst-bretagne.fr>.
+    Closes: #152270.
 
  -- Wichert Akkerman <wakkerma@debian.org>  UNRELEASED
 
