If in --test mode, and --stop is given, increment n_killed, so that start-stop-daemon returns the proper exit value.  Thanks Thomas Morin <thomas.morin@enst-bretagne.fr>.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Thu Jul 11 22:26:30 CDT 2002 Adam Heath <doogie@debian.org>
+
+  * utils/start-stop-daemon.c: If in --test mode, and --stop is given,
+    increment n_killed, so that start-stop-daemon returns the proper exit
+    value.  Thanks Thomas Morin <thomas.morin@enst-bretagne.fr>.
+
 Thu Jul 11 22:19:12 CDT 2002 Adam Heath <doogie@debian.org>
 
   * utils/start-stop-daemon.c: Fix test inversion in start-stop-daemon,
