Change release name to me, and set release date.

--- a/debian/changelog
+++ b/debian/changelog
@@ -10,7 +10,7 @@ dpkg (1.10.3) unstable; urgency=low
     start-stop-daemon returns the proper exit value.  Thanks Thomas Morin
     <thomas.morin@enst-bretagne.fr>.  Closes: #151992.
 
- -- Wichert Akkerman <wakkerma@debian.org>  UNRELEASED
+ -- Adam Heath <doogie@debian.org>  Thu, 11 Jul 2002 22:58:43 -0500
 
 dpkg (1.10.2) unstable; urgency=low
 
