Updated for 1.10.4 version.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sun Jul 14 15:09:24 CDT 2002 Adam Heath <doogie@debian.org>
+
+  * version-nr, debian/changelog: Updated for 1.10.4 version.
+
 Thu Jul 11 23:33:13 CDT 2002 Adam Heath <doogie@debian.org>
 
   * debian/control: dselect replaces dpkg << 1.10.3, as we moved the
