--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,7 @@
+dpkg (1.10.4) unstable; urgency=low
+
+ -- Adam Heath <doogie@debian.org>  UNRELEASED
+
 dpkg (1.10.3) unstable; urgency=low
 
   * Move dselect.cfg to dselect package. Closes: Bug#152132
