--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sun Jul 14 15:10:22 CDT 2002 Adam Heath <doogie@debian.org>
+
+  * configure.in: Remove -ffunction-sections and -fdata-sections.
+
 Sun Jul 14 15:09:24 CDT 2002 Adam Heath <doogie@debian.org>
 
   * version-nr, debian/changelog: Updated for 1.10.4 version.
