--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,7 @@
 dpkg (1.10.4) unstable; urgency=low
 
+  * Remove -ffunction-sections and -fdata-sections.  Closes: #152130.
+
  -- Adam Heath <doogie@debian.org>  UNRELEASED
 
 dpkg (1.10.3) unstable; urgency=low
