Install archtable into /usr/share/dpkg/.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,8 @@
 Sun Jul 14 15:10:22 CDT 2002 Adam Heath <doogie@debian.org>
 
   * configure.in: Remove -ffunction-sections and -fdata-sections.
+  * Makefile.conf.in, Makefile.in, debian/rules:  Install archtable into
+    /usr/share/dpkg/.
 
 Sun Jul 14 15:09:24 CDT 2002 Adam Heath <doogie@debian.org>
 
