--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 dpkg (1.10.4) unstable; urgency=low
 
   * Remove -ffunction-sections and -fdata-sections.  Closes: #152130.
+  * Install archtable into /usr/share/dpkg/.
 
  -- Adam Heath <doogie@debian.org>  UNRELEASED
 
