--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Thu Aug 22 22:59:54 CDT 2002 Adam Heath <doogie@debian.org>
+ 
+  * version-nr, debian/changelog: Modified for 1.10.5.
+
 Sun Jul 14 15:10:22 CDT 2002 Adam Heath <doogie@debian.org>
 
   * configure.in: Remove -ffunction-sections and -fdata-sections.
