--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Thu Aug 22 23:01:53 CDT 2002 Adam Heath <doogie@debian.org>
+
+  * utils/md5sum.c: Fix segfault in md5sum if the file being checked
+    doesn't exist.
+
 Thu Aug 22 22:59:54 CDT 2002 Adam Heath <doogie@debian.org>
  
   * version-nr, debian/changelog: Modified for 1.10.5.
