Handle directories better in md5sum.

--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,7 @@ dpkg (1.10.5) unstable; urgency=low
   * Fix segfault in md5sum if the file being checked doesn't exist.
     Closes: #154503.
   * Fix extraction of md5sum in dpkg-scanpackages.  Closes: #153769.
+  * Handle directories better in md5sum.  Closes: #157453.
 
  -- Adam Heath <doogie@debian.org>  UNRELEASED
 
