Fix read past buffer in lib/nfmalloc.c.

--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,7 @@ dpkg (1.10.5) unstable; urgency=low
     Closes: #154503.
   * Fix extraction of md5sum in dpkg-scanpackages.  Closes: #153769.
   * Handle directories better in md5sum.  Closes: #157453.
+  * Fix read past buffer in lib/nfmalloc.c.  Closes: #157304.
 
  -- Adam Heath <doogie@debian.org>  UNRELEASED
 
