--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Thu Aug 22 23:25:23 CDT 2002 Adam Heath <doogie@debian.org>
+
+  * lib/nfmalloc.c: Fix read past buffer in lib/nfmalloc.c.
+
 Thu Aug 22 23:16:02 CDT 2002 Adam Heath <doogie@debian.org>
 
   * utils/md5sum.c: Handle directories better in md5sum.
