Fix segfault when --auto-deconfigure is given.  This is causes because the deconfigure list is allocated in an obstack, but then freed with normal free().

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Sat Aug 24 14:16:13 CDT 2002 Adam Heath <doogie@debian.org>
+
+  * lib/archives.c: Fix segfault when --auto-deconfigure is given.  This is
+    causes because the deconfigure list is allocated in an obstack, but
+    then freed with normal free().
+
 Thu Aug 22 23:37:45 CDT 2002 Adam Heath <doogie@debian.org>
 
   * lib/database.c, lib/parse.c, lib/parsehelp.c, main/main.c: Fix several
