Allow spaces between the end of a version, and the trailing ')'.

--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,8 @@ dpkg (1.10.5) unstable; urgency=low
   * Fix read past buffer in lib/nfmalloc.c.  Closes: #157304.
   * Fix several read pass buffer bugs, and a memleak.  Closes: #155362.
   * Fix segfault when --auto-deconfigure is given.  Closes: #157762.
+  * Allow spaces between the end of a version, and the trailing ')'.
+    Closes: #154898.
 
  -- Adam Heath <doogie@debian.org>  UNRELEASED
 
