--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Sat Aug 24 14:41:45 CDT 2002 Adam Heath <doogie@debian.org>
+
+  * lib/fields.c: Allow spaces between the end of a version, and the
+    trailing ')'.
+
 Sat Aug 24 14:16:13 CDT 2002 Adam Heath <doogie@debian.org>
 
   * lib/archives.c: Fix segfault when --auto-deconfigure is given.  This is
