* archtable: Add i386-gnu0.3. * main/Makefile.in, utils/Makefile.in: Fix handling of static compiles,   with regard to zlib.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Sat Aug 24 14:47:56 CDT 2002 Adam Heath <doogie@debian.org>
+
+  * archtable: Add i386-gnu0.3.
+  * main/Makefile.in, utils/Makefile.in: Fix handling of static compiles,
+    with regard to zlib.
+
 Sat Aug 24 14:41:45 CDT 2002 Adam Heath <doogie@debian.org>
 
   * lib/fields.c: Allow spaces between the end of a version, and the
