--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,9 @@ dpkg (1.10.5) unstable; urgency=low
   * Fix segfault when --auto-deconfigure is given.  Closes: #157762.
   * Allow spaces between the end of a version, and the trailing ')'.
     Closes: #154898.
+  * Fixes for HURD:  Closes: #156545
+    * Add i386-gnu0.3 to archtable.
+    * Fix handling of static compiles, with regard to zlib.
 
  -- Adam Heath <doogie@debian.org>  UNRELEASED
 
