Previous install-infos(before 1.10) handled multiple dir file entries, because they would copy the entire stanza unmodified.  The newest version does not do this, as it reformats the options, and thereby only takes the first line.  So, we now split all the lines from the stanza, and process them all.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+Sat Aug 24 15:36:41 CDT 2002 Adam Heath <doogie@debian.org>
+
+  * scripts/install-info.pl: Previous install-infos(before 1.10) handled
+    multiple dir file entries, because they would copy the entire stanza
+    unmodified.  The newest version does not do this, as it reformats the
+    options, and thereby only takes the first line.  So, we now split all
+    the lines from the stanza, and process them all.
+
 Sat Aug 24 14:47:56 CDT 2002 Adam Heath <doogie@debian.org>
 
   * archtable: Add i386-gnu0.3.
