--- a/debian/changelog
+++ b/debian/changelog
@@ -16,7 +16,7 @@ dpkg (1.10.5) unstable; urgency=low
     because they would copy the entire stanza unmodified.  The newest
     version does not do this, as it reformats the options, and thereby
     only takes the first line.  So, we now split all the lines from the
-    stanza, and process them all.
+    stanza, and process them all.  Closes: #147492.
 
  -- Adam Heath <doogie@debian.org>  UNRELEASED
 
