Fix corruption of available file, caused by use of memory that was previously freed.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Thu Aug 29 14:42:05 CDT 2002 Adam Heath <doogie@debian.org>
+
+  * lib/parsehelp.c: Fix corruption of available file, caused by use of
+    memory that was previously freed.
+
 Thu Aug 29 14:31:22 CDT 2002 Adam Heath <doogie@debian.org>
 
   * lib/parse.c: Check for eof before we getc(), not after.
