--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sat Aug 31 23:42:08 CDT 2002 Adam Heath <doogie@debian.org>
+
+  * version-nr, debian/changelog: Modified for version 1.10.6.
+
 Thu Aug 29 16:43:45 CDT 2002 Adam Heath <doogie@debian.org>
 
   * debian/changelog: Set date for release.
