Set date for 1.10.6 release.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sun Sep  1 23:46:04 CDT 2002 Adam Heath <doogie@debian.org>
+
+  * debian/changelog: Set date for 1.10.6 release.
+
 Sat Aug 31 23:46:04 CDT 2002 Adam Heath <doogie@debian.org>
 
   * dpkg-deb/main.c, dselect/main.cc, include/dpkg.h.in, lib/startup.c
