--- a/debian/changelog
+++ b/debian/changelog
@@ -4,7 +4,7 @@ dpkg (1.10.6) unstable; urgency=low
     slightly corrupts it's memory enough that it can't be freed without
     segfaulting.  Closes: #159023.
 
- -- Adam Heath <doogie@debian.org>  UNRELEASED
+ -- Adam Heath <doogie@debian.org>  Sun,  1 Sep 2002 00:19:18 -0500
 
 dpkg (1.10.5) unstable; urgency=low
 
