--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,7 @@
+dpkg (1.10.7) unstable; urgency=low
+
+ -- Adam Heath <doogie@debian.org>  UNRELEASED
+
 dpkg (1.10.6) unstable; urgency=low
 
   * Don't call nffreeall, in any of the c/c++ programs.  It appears dselect
