--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Tue Sep  3 18:36:42 CDT 2002 Adam Heath <doogie@debian.org>
+
+  * version-nr, debian/changelog: Set 1.10.7 version.
+
 Sun Sep  1 23:46:04 CDT 2002 Adam Heath <doogie@debian.org>
 
   * debian/changelog: Set date for 1.10.6 release.
