Fix double free in modstatdb_init, in the case that modstatdb_shutdown was called previously.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Tue Sep  3 18:40:08 CDT 2002 Adam Heath <doogie@debian.org>
+
+  * lib/dbmodify.c: Fix double free in modstatdb_init, in the case that
+    modstatdb_shutdown was called previously.
+
 Tue Sep  3 18:37:45 CDT 2002 Adam Heath <doogie@debian.org>
 
   * lib/nfmalloc.c: Protect duplicate calls to obstack_free(),
