--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,8 @@
 dpkg (1.10.7) unstable; urgency=low
 
+  * Fix double free in modstatdb_init, in the case that modstatdb_shutdown
+    was called previously.  Closes: #159515.
+
  -- Adam Heath <doogie@debian.org>  UNRELEASED
 
 dpkg (1.10.6) unstable; urgency=low
