--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Tue Sep  3 18:59:19 CDT 2002 Adam Heath <doogie@debian.org>
+
+  * debian/changelog: Set date for 1.10.7 release.
+
 Tue Sep  3 18:40:08 CDT 2002 Adam Heath <doogie@debian.org>
 
   * lib/dbmodify.c: Fix double free in modstatdb_init, in the case that
