--- a/debian/changelog
+++ b/debian/changelog
@@ -3,7 +3,7 @@ dpkg (1.10.7) unstable; urgency=low
   * Fix double free in modstatdb_init, in the case that modstatdb_shutdown
     was called previously.  Closes: #159515.
 
- -- Adam Heath <doogie@debian.org>  UNRELEASED
+ -- Adam Heath <doogie@debian.org>  Tue,  3 Sep 2002 18:59:19 -0500
 
 dpkg (1.10.6) unstable; urgency=low
 
