--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Thu Sep  5 16:29:39 CDT 2002 Adam Heath <doogie@debian.org>
+
+  * version-nr, debian/changelog: Set 1.10.8 version.
+
 Tue Sep  3 18:59:19 CDT 2002 Adam Heath <doogie@debian.org>
 
   * debian/changelog: Set date for 1.10.7 release.
