--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,7 @@
+dpkg (1.10.8) unstable; urgency=low
+
+ -- Adam Heath <doogie@debian.org>  UNRELEASED
+
 dpkg (1.10.7) unstable; urgency=low
 
   * Fix double free in modstatdb_init, in the case that modstatdb_shutdown
