Make the multiline regex have an upper bound, instead of being unbounded, as newer perls have a larger stack frame, which cause them to segfault quicker with larger inputs.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Thu Sep  5 16:31:11 CDT 2002 Adam Heath <doogie@debian.org>
+
+  * scripts/install-info.pl: Make the multiline regex have an upper bound,
+    instead of being unbounded, as newer perls have a larger stack frame,
+    which cause them to segfault quicker with larger inputs.
+
 Thu Sep  5 16:29:39 CDT 2002 Adam Heath <doogie@debian.org>
 
   * version-nr, debian/changelog: Set 1.10.8 version.
