Set date for 1.10.8 release.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Thu Sep  5 16:32:01 CDT 2002 Adam Heath <doogie@debian.org>
+
+  * debian/changelog: Set date for 1.10.8 release.
+
 Thu Sep  5 16:31:11 CDT 2002 Adam Heath <doogie@debian.org>
 
   * scripts/install-info.pl: Make the multiline regex have an upper bound,
