--- a/debian/changelog
+++ b/debian/changelog
@@ -4,7 +4,7 @@ dpkg (1.10.8) unstable; urgency=low
     unbounded, as newer perls have a larger stack frame, which cause them
     to segfault quicker with larger inputs.  Closes: #159756.
 
- -- Adam Heath <doogie@debian.org>  UNRELEASED
+ -- Adam Heath <doogie@debian.org>  Thu,  5 Sep 2002 16:32:01 -0500
 
 dpkg (1.10.7) unstable; urgency=low
 
