--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sun Sep 15 12:43:00 CDT 2002 Adam Heath <doogie@debian.org>
+
+  * version-nr, debian/changelog: Set 1.10.9 version.
+
 Thu Sep  5 16:32:01 CDT 2002 Adam Heath <doogie@debian.org>
 
   * debian/changelog: Set date for 1.10.8 release.
