--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,7 @@
+dpkg (1.10.9) unstable; urgency=low
+
+ -- Adam Heath <doogie@debian.org>  UNRELEASED
+
 dpkg (1.10.8) unstable; urgency=low
 
   * Make the multiline regex have an upper bound, instead of being
