Fix dereference in cu_closefd(), which was the cause of close(random number) on most arches, but close(0) on s390x.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Sun Sep 15 12:48:36 CDT 2002 Adam Heath <doogie@debian.org>
+
+  * main/help.c: Fix dereference in cu_closefd(), which was the cause of
+    close(random number) on most arches, but close(0) on s390x.
+
 Sun Sep 15 12:43:00 CDT 2002 Adam Heath <doogie@debian.org>
 
   * version-nr, debian/changelog: Set 1.10.9 version.
