--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,8 @@
 dpkg (1.10.9) unstable; urgency=low
 
+  * Fix dereference in main/help.c:cu_closefd(), which was the cause of
+    close(random number) on most arches, but close(0) on s390x.
+
  -- Adam Heath <doogie@debian.org>  UNRELEASED
 
 dpkg (1.10.8) unstable; urgency=low
