--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sun Sep 15 13:19:40 CDT 2002 Adam Heath <doogie@debian.org>
+
+  * archtable: Add s390x.
+
 Sun Sep 15 12:48:36 CDT 2002 Adam Heath <doogie@debian.org>
 
   * main/help.c: Fix dereference in cu_closefd(), which was the cause of
