Set date for 1.10.9 release.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sun Sep 15 13:21:38 CDT 2002 Adam Heath <doogie@debian.org>
+
+  * debian/changelog: Set date for 1.10.9 release.
+
 Sun Sep 15 13:19:40 CDT 2002 Adam Heath <doogie@debian.org>
 
   * archtable: Add s390x.
