--- a/debian/changelog
+++ b/debian/changelog
@@ -4,7 +4,7 @@ dpkg (1.10.9) unstable; urgency=low
     close(random number) on most arches, but close(0) on s390x.
   * Add s390x to archtable.  Closes: #160976.
 
- -- Adam Heath <doogie@debian.org>  UNRELEASED
+ -- Adam Heath <doogie@debian.org>  Sun, 15 Sep 2002 13:21:38 -0500
 
 dpkg (1.10.8) unstable; urgency=low
 
