--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sun Sep 15 13:25:29 CDT 2002 Adam Heath <doogie@debian.org>
+
+  * scripts/dpkg-architecture.pl: Add s390x.
+
 Sun Sep 15 13:21:38 CDT 2002 Adam Heath <doogie@debian.org>
 
   * debian/changelog: Set date for 1.10.9 release.
