Updated for hurd.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+dpkg (1.10.10) unstable; urgency=low
+
+  * Update archtable for hurd.  Closes: #187509.
+
+ -- Adam Heath <doogie@debian.org>  UNRELEASED
+
 dpkg (1.10.9) unstable; urgency=low
 
   * Fix dereference in main/help.c:cu_closefd(), which was the cause of
