Make the dpkg-iasearch conflicts versioned.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 dpkg (1.10.10) unstable; urgency=low
 
   * Update archtable for hurd.  Closes: #187509.
+  * Make the dpkg-iasearch conflicts versioned.  Closes: #170698.
 
  -- Adam Heath <doogie@debian.org>  UNRELEASED
 
