Surround sed call with ''.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Tue Apr 15 00:26:06 CDT 2003 Adam Heath <doogie@debian.org>
+
+  * Makefile.in: Surround sed call with ''.
+
 Tue Apr 15 00:16:44 CDT 2003 Adam Heath <doogie@debian.org>
 
   * debian/control: Make the dpkg-iasearch conflicts versioned.
