--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ dpkg (1.10.10) unstable; urgency=low
 
   * Update archtable for hurd.  Closes: #187509.
   * Make the dpkg-iasearch conflicts versioned.  Closes: #170698.
+  * Surround sed call with '' in Makefile.in.  Closes: #187534.
 
  -- Adam Heath <doogie@debian.org>  UNRELEASED
 
