Strip trailing / from the file args in dpkg-statoverride.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Tue Apr 15 00:35:40 CDT 2003 Adam Heath <doogie@debian.org>
+
+  * scripts/dpkg-statoverride.pl: Strip trailing / from the file args in
+    dpkg-statoverride.
+
 Tue Apr 15 00:26:06 CDT 2003 Adam Heath <doogie@debian.org>
 
   * Makefile.in: Surround sed call with ''.
