Modified to use autotools-dev.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Tue Apr 15 00:48:06 CDT 2003 Adam Heath <doogie@debian.org>
+
+  * debian/control, debian/rules, debian/changelog: Modified to use
+    autotools-dev.
+
 Tue Apr 15 00:35:40 CDT 2003 Adam Heath <doogie@debian.org>
 
   * scripts/dpkg-statoverride.pl: Strip trailing / from the file args in
