--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,7 @@ dpkg (1.10.10) unstable; urgency=low
   * Surround sed call with '' in Makefile.in.  Closes: #187534.
   * Strip trailing / from the file args in dpkg-statoverride.  Closes:
     #184239.
+  * Modified to use autotools-dev.  Closes: #179656.
 
  -- Adam Heath <doogie@debian.org>  UNRELEASED
 
