Add netbsd support, and support hypenated values in dpkg-architecture.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Tue Apr 15 11:32:22 CDT 2003 Adam Heath <doogie@debian.org>
+
+  * archtable, utils/start-stop-daemon.c,  scripts/dpkg-architecture.pl:
+    Add netbsd support.
+  * scripts/dpkg-architecture.pl: Support hypenated values.
+
 Tue Apr 15 01:05:04 CDT 2003 Adam Heath <doogie@debian.org>
 
   * config.sub, config.guess: Updated.
