--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,9 @@ dpkg (1.10.10) unstable; urgency=low
   * Strip trailing / from the file args in dpkg-statoverride.  Closes:
     #184239.
   * Modified to use autotools-dev.  Closes: #179656.
+  * Add netbsd support.  Closes: #179658, #179659.
+  * Support hypenated values in dpkg-architeture. Closes: #179661
+
 
  -- Adam Heath <doogie@debian.org>  UNRELEASED
 
