--- a/po/ru.po
+++ b/po/ru.po
@@ -1907,8 +1907,8 @@ msgid ""
 "%d expected program(s) not found on PATH.\n"
 "NB: root's PATH should usually contain /usr/local/sbin, /usr/sbin and /sbin."
 msgstr ""
-"NB: PATH суперпользователя обычно содержит /usr/local/sbin, /usr/sbin и /"
-"sbin."
+"%d expected program(s) not found on PATH.\n"
+"NB: root's PATH should usually contain /usr/local/sbin, /usr/sbin and /sbin."
 
 #: main/help.c:179
 #, c-format
@@ -4323,7 +4323,7 @@ msgstr ""
 #: dselect/method.cc:160
 #, c-format
 msgid "unable to ignore signal %d before running %.250s"
-msgstr "не удалось игнорировать сигнал %s перед запуском %.250s"
+msgstr "не удалось игнорировать сигнал %d перед запуском %.250s"
 
 #: dselect/method.cc:167
 #, c-format
