--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sat Apr 26 14:22:16 CDT 2003 Adam Heath <doogie@debian.org>
+
+  * po/Makevars: Needed to work with the newer gettext.
+
 Sat Apr 26 11:29:30 CDT 2003 Adam Heath <doogie@debian.org>
 
   * configure.in, Makefile.in: Updated for gettext 0.11.5.
