Added generated/symlinked files.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sat Apr 26 14:28:17 CDT 2003 Adam Heath <doogie@debian.org>
+
+  * .cvsignore, po/.cvsignore: Added generated/symlinked files.
+
 Sat Apr 26 14:24:05 CDT 2003 Adam Heath <doogie@debian.org>
 
   * mkinstalldirs: removed, as this is generated.
