--- a/debian/changelog
+++ b/debian/changelog
@@ -8,7 +8,7 @@ dpkg (1.10.10) unstable; urgency=low
   * Modified to use autotools-dev.  Closes: #179656.
   * Add netbsd support.  Closes: #179658, #179659.
   * Support hypenated values in dpkg-architeture. Closes: #179661
-
+  * No longer managed the /usr/doc symlinks.
 
  -- Adam Heath <doogie@debian.org>  UNRELEASED
 
