Updated for 1.10.10 release.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sat Apr 26 15:10:24 CDT 2003 Adam Heath <doogie@debian.org>
+
+  * version-nr, debian/changelog: Updated for 1.10.10 release.
+
 Sat Apr 26 15:09:10 CDT 2003 Adam Heath <doogie@debian.org>
 
   * debian/control: Updated to standards-version 3.5.8.
