--- a/debian/changelog
+++ b/debian/changelog
@@ -10,7 +10,7 @@ dpkg (1.10.10) unstable; urgency=low
   * Support hypenated values in dpkg-architeture. Closes: #179661
   * No longer managed the /usr/doc symlinks.
 
- -- Adam Heath <doogie@debian.org>  UNRELEASED
+ -- Adam Heath <doogie@debian.org>  Sat, 26 Apr 2003 15:10:24 -0500
 
 dpkg (1.10.9) unstable; urgency=low
 
