srcipts/dpkg-source.pl: allow ~ in version numbers

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Fri, 12 Sep 2003 17:15:33 +0200 Wichert Akkerman <wichert@deephackmode.org>
+
+  * srcipts/dpkg-source.pl: allow ~ in version numbers
+
 Sat Apr 26 15:10:24 CDT 2003 Adam Heath <doogie@debian.org>
 
   * version-nr, debian/changelog: Updated for 1.10.10 release.
