--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+dpkg (1.10.11) unstable; urgency=low
+
+  * Teach dpkg-source that ~ is legal in version numbers
+
+ -- Wichert Akkerman <debian@extern.wiggy.net>  UNRELEASED
+
 dpkg (1.10.10) unstable; urgency=low
 
   * Update archtable for hurd.  Closes: #187509.
