s/top_srcdir/abs_top_srcdir/

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sat Sep 13 13:57:22 CDT 2003 Adam Heath <doogie@debian.org>
+
+  * Makefile.conf.in: s/top_srcdir/abs_top_srcdir/
+
 Sat Sep 13 13:56:23 CDT 2003 Adam Heath <doogie@debian.org>
 
   * lib/compat.c: s/SYS_SIGLIST_DECLARED/HAVE_DECL_SYS_SIGLIST/
