* Change AC_SYS_SIGLIST_DECLARED to AC_DECL_SYS_SIGLIST. * Add locale.h to list of checked headers. * Pass external to AM_GNU_GETTEXT

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+Sat Sep 13 14:18:02 CDT 2003 Adam Heath <doogie@debian.org>
+
+  * configure.in:
+    * Change AC_SYS_SIGLIST_DECLARED to AC_DECL_SYS_SIGLIST.
+    * Add locale.h to list of checked headers.
+    * Pass external to AM_GNU_GETTEXT
+
 Sat Sep 13 13:57:22 CDT 2003 Adam Heath <doogie@debian.org>
 
   * Makefile.conf.in: s/top_srcdir/abs_top_srcdir/
