--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Sat Sep 13 14:20:12 CDT 2003 Adam Heath <doogie@debian.org>
+
+  * debian/control: Add build-depends on sgml-base, and increase
+    gettext build-depends to 0.12.1-3.
+
 Sat Sep 13 14:18:02 CDT 2003 Adam Heath <doogie@debian.org>
 
   * configure.in:
