Updated config.sub and config.guess.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sat Sep 13 14:21:13 CDT 2003 Adam Heath <doogie@debian.org>
+
+  * config.sub, config.guess: Updated
+
 Sat Sep 13 14:20:12 CDT 2003 Adam Heath <doogie@debian.org>
 
   * debian/control: Add build-depends on sgml-base, and increase
