--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,7 @@ dpkg (1.10.11) unstable; urgency=low
   * Teach dpkg-source that ~ is legal in version numbers
   * Add build-depends on sgml-base, and increase gettext build-depends to
     0.12.1-3.
+  * Updated config.sub and config.guess in cvs.
 
  -- Wichert Akkerman <debian@extern.wiggy.net>  UNRELEASED
 
