Fix inversion test of $state against 'expected' when removing an alternative.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Sat Sep 13 14:34:10 CDT 2003 Adam Heath <doogie@debian.org>
+
+  * scripts/update-alternatives.pl: Fix inversion test of $state against
+    'expected' when removing an alternative.
+
 Sat Sep 13 14:31:22 CDT 2003 Adam Heath <doogie@debian.org>
 
   * lib/startup.c, lib/Makefile.in, include/dpkg.h.in: Change
