Fix inverted test of eof in parsedb, while looking for eof after field name.

--- a/debian/changelog
+++ b/debian/changelog
@@ -12,6 +12,9 @@ dpkg (1.10.11) unstable; urgency=low
   * Sebastian Ley <sebastian.ley@mmweg.rwth-aachen.de>:
     Fix inversion test of $state against 'expected' when removing an
     alternative.  Closes: #203791.
+  * Andrew Suffield <asuffield@debian.org>:
+    Fix inverted test of eof in parsedb, while looking for eof after
+    field name.  Closes: #198218
 
  -- Wichert Akkerman <debian@extern.wiggy.net>  UNRELEASED
 
