--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Sat Sep 13 14:36:37 CDT 2003 Adam Heath <doogie@debian.org>
+
+  * lib/parse.c: Fix inverted test of eof in parsedb, while looking for eof
+    after field name.
+
 Sat Sep 13 14:34:10 CDT 2003 Adam Heath <doogie@debian.org>
 
   * scripts/update-alternatives.pl: Fix inversion test of $state against
