--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sat Sep 13 14:38:55 CDT 2003 Adam Heath <doogie@debian.org>
+
+  * debian/dpkg-doc.postinst: Add set -e.
+
 Sat Sep 13 14:36:37 CDT 2003 Adam Heath <doogie@debian.org>
 
   * lib/parse.c: Fix inverted test of eof in parsedb, while looking for eof
