--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Sat Sep 13 15:20:56 CDT 2003 Adam Heath <doogie@debian.org>
+
+  * lib/enquiry.c, scripts/dpkg-architecture.pl: dpkg --print-architecture
+    now does gcc -dumpmachine instead of --print-libgcc-file-name.
+
 Sat Sep 13 14:38:55 CDT 2003 Adam Heath <doogie@debian.org>
 
   * debian/dpkg-doc.postinst: Add set -e.
