--- a/debian/changelog
+++ b/debian/changelog
@@ -19,7 +19,7 @@ dpkg (1.10.11) unstable; urgency=low
     Add set -e to dpkg-doc.postinst.  Closes: #191261
   * Michael Weber <michaelw@debian.org>:
     dpkg --print-architecture now does gcc -dumpmachine instead of
-    --print-libgcc-file-name.  Closes: #131893, #8241, #106793
+    --print-libgcc-file-name.  Closes: #131893, #8241, #106793, #210285
 
  -- Wichert Akkerman <debian@extern.wiggy.net>  UNRELEASED
 
