Apply patch to change hashing function, and increase bin size, for the package database.

--- a/debian/changelog
+++ b/debian/changelog
@@ -20,6 +20,9 @@ dpkg (1.10.11) unstable; urgency=low
   * Michael Weber <michaelw@debian.org>:
     dpkg --print-architecture now does gcc -dumpmachine instead of
     --print-libgcc-file-name.  Closes: #131893, #8241, #106793, #210285
+  * Daniel Silverstone <dsilvers@digital-scurf.org>:
+    Apply patch to change hashing function, and increase bin size, for
+    the package database.  Closes: #206416
 
  -- Wichert Akkerman <debian@extern.wiggy.net>  UNRELEASED
 
