--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+  * lib/database.c: Apply patch to change hashing function, and increase
+    bin size, for the package database.
+
 Sat Sep 13 15:20:56 CDT 2003 Adam Heath <doogie@debian.org>
 
   * lib/enquiry.c, scripts/dpkg-architecture.pl: dpkg --print-architecture
