Apply patch to change hashing function, and increase bin size, for the package database.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+Sat Sep 13 15:45:10 CDT 2003 Adam Heath <doogie@debian.org>
+
   * lib/database.c: Apply patch to change hashing function, and increase
     bin size, for the package database.
 
