Apply patch to make dpkg work with POSIX 1003.1-2001.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,10 @@
-Sat Sep 13 15:45:10 CDT 2003 Adam Heath <doogie@debian.org>
+Sat Sep 13 15:56:13 CDT 2003 Adam Heath <doogie@debian.org>
+
+  * automake/tools.m4, dselect/Makefile.in, methods/disk.setup,
+    scripts/dpkg-parsechangelog.pl, scripts/dpkg-source.pl: Apply patch to
+    make dpkg work with POSIX 1003.1-2001.
+
+Sat Sep 13 15:40:39 CDT 2003 Adam Heath <doogie@debian.org>
 
   * lib/database.c: Apply patch to change hashing function, and increase
     bin size, for the package database.
