--- a/debian/changelog
+++ b/debian/changelog
@@ -23,6 +23,9 @@ dpkg (1.10.11) unstable; urgency=low
   * Daniel Silverstone <dsilvers@digital-scurf.org>:
     Apply patch to change hashing function, and increase bin size, for
     the package database.  Closes: #206416
+  * Paul Eggert <eggert@CS.UCLA.EDU>:
+    Apply patch to make dpkg work with POSIX 1003.1-2001.  Closes:
+    #204894
 
  -- Wichert Akkerman <debian@extern.wiggy.net>  UNRELEASED
 
