Increase filesdb bin size, and alter hashing function.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sat Sep 13 16:09:13 CDT 2003 Adam Heath <doogie@debian.org>
+
+  * main/filesdb.c: Increase filesdb bin size, and alter hashing function.
+
 Sat Sep 13 16:04:37 CDT 2003 Adam Heath <doogie@debian.org>
 
   * scripts/dpkg-statoverride.pl: Fix "stripping trailing /" message from
