Add .cvsignore to dpkg-source's default diff ignore regex.  Also fix missing \ escape for .deps.

--- a/debian/changelog
+++ b/debian/changelog
@@ -34,6 +34,9 @@ dpkg (1.10.11) unstable; urgency=low
     #179385
   * Anthony Towns <aj@azure.humbug.org.au>:
     Retry removing empty dirs during purge.  Closes: #112386
+  * Darren Salt <linux@youmustbejoking.demon.co.uk>:
+    Add .cvsignore to dpkg-source's default diff ignore regex.  Also fix
+    missing \ escape for .deps.  Closes: #174013
 
  -- Wichert Akkerman <debian@extern.wiggy.net>  UNRELEASED
 
