--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Sat Sep 13 16:26:36 CDT 2003 Adam Heath <doogie@debian.org>
+
+  * scripts/dpkg-source.pl: Add .cvsignore to dpkg-source's default diff
+    ignore regex.  Also fix missing \ escape for .deps.
+
 Sat Sep 13 16:16:52 CDT 2003 Adam Heath <doogie@debian.org>
 
   * main/remove.c: Retry removing empty dirs during purge.
