Fix segfault with --status-fd

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sat Sep 13 16:28:52 CDT 2003 Adam Heath <doogie@debian.org>
+
+  * main/main.c: Fix segfault with --status-fd.
+
 Sat Sep 13 16:26:36 CDT 2003 Adam Heath <doogie@debian.org>
 
   * scripts/dpkg-source.pl: Add .cvsignore to dpkg-source's default diff
