--- a/debian/changelog
+++ b/debian/changelog
@@ -37,6 +37,8 @@ dpkg (1.10.11) unstable; urgency=low
   * Darren Salt <linux@youmustbejoking.demon.co.uk>:
     Add .cvsignore to dpkg-source's default diff ignore regex.  Also fix
     missing \ escape for .deps.  Closes: #174013
+  * Koblinger Egmont <egmont@uhulinux.hu>:
+    Fix segfault with --status-fd.  Closes: #173618
 
  -- Wichert Akkerman <debian@extern.wiggy.net>  UNRELEASED
 
