--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,7 @@ dpkg (1.10.11) unstable; urgency=low
   * Add build-depends on sgml-base, and increase gettext build-depends to
     0.12.1-3.
   * Updated config.sub and config.guess in cvs.
+  * Change use of strncpy in parsedb to memcpy.  Closes: #160447
   * Frank Lichtenheld <frank@lichtenheld.de>:
     Apply patch, to handle missing infodir.bak, and empty files.  Closes:
     #196361
