Add .svn, {arch}, and .arch-ids to dpkg-source -i default regex.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Sat Sep 13 17:18:46 CDT 2003 Adam Heath <doogie@debian.org>
+
+  * scripts/dpkg-source.pl: Add .svn, {arch}, and .arch-ids to dpkg-source
+    -i default regex.
+
 Sat Sep 13 16:34:53 CDT 2003 Adam Heath <doogie@debian.org>
 
   * lib/parse.c: Change use of strncpy in parsedb to memcpy.
