--- a/debian/changelog
+++ b/debian/changelog
@@ -40,6 +40,10 @@ dpkg (1.10.11) unstable; urgency=low
     missing \ escape for .deps.  Closes: #174013
   * Koblinger Egmont <egmont@uhulinux.hu>:
     Fix segfault with --status-fd.  Closes: #173618
+  * Colin Watson <cjwatson@debian.org>,
+    Andrew Suffield <asuffield@debian.org>:
+    Add .svn, {arch}, and .arch-ids to dpkg-source -i default regex.
+    Closes: #169359
 
  -- Wichert Akkerman <debian@extern.wiggy.net>  UNRELEASED
 
