Added alphaev68-linux-gnu to archtable.

--- a/debian/changelog
+++ b/debian/changelog
@@ -44,6 +44,8 @@ dpkg (1.10.11) unstable; urgency=low
     Andrew Suffield <asuffield@debian.org>:
     Add .svn, {arch}, and .arch-ids to dpkg-source -i default regex.
     Closes: #169359
+  * Falk Hueffner <falk@debian.org>:
+    Added alphaev68-linux-gnu to archtable.  Closes: #199360
 
  -- Wichert Akkerman <debian@extern.wiggy.net>  UNRELEASED
 
